--- a/empleados/pom.xml
+++ b/empleados/pom.xml
@@ -4,14 +4,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.sistema</groupId>
-		<artifactId>proyecto_restaurante</artifactId>
+		<artifactId>proyecto_empleados</artifactId>
 		<version>1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath> <!-- Ajusta la ruta si es necesario -->
 	</parent>
 	<groupId>com.sistema</groupId>
 	<artifactId>empleados</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>pedidos</name>
+	<name>empleados</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
