--- a/nomina/pom.xml
+++ b/nomina/pom.xml
@@ -3,15 +3,16 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.3</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>com.sistema</groupId>
+		<artifactId>proyecto_empleados</artifactId>
+		<version>1.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath> <!-- Ajusta la ruta si es necesario -->
 	</parent>
+
 	<groupId>com.sistema</groupId>
 	<artifactId>nomina</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>restaurante</name>
+	<name>nomina</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
