--- a/security/pom.xml
+++ b/security/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.sistema</groupId>
-		<artifactId>proyecto_restaurante</artifactId>
+		<artifactId>proyecto_empleados</artifactId>
 		<version>1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath> <!-- Ajusta la ruta si es necesario -->
 	</parent>
